opam-version: "1.2"
name: "cmph"
version: "0.1.2"
maintainer: "Jack Feser <feser@csail.mit.edu>"
authors: "Jack Feser <feser@csail.mit.edu>"
homepage: "https://github.com/jfeser/ocaml-cmph"
bug-reports: "https://github.com/jfeser/ocaml-cmph/issues"
doc: "https://jfeser.github.io/ocaml-cmph/"
license: "MIT"
dev-repo: "https://github.com/jfeser/ocaml-cmph.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"           {build & >= "1.7"}
  "ounit"          {test & >= "2.0" & < "2.1"}
  "ctypes"         {>= "0.14" & < "0.15"}
  "ctypes-foreign" {>= "0.4" & < "0.5"}
  "core"           {>= "v0.11" & < "v0.12"}
  "ppx_sexp_conv"  {>= "v0.11" & < "v0.12"}
]
